# pr-summary-action

./: .gitignore  .pre-commit-config.yaml  README.md  TEST.md  TEST_v1.4.md  action.yml  example-workflow.yml  facebook_react_specific_prs.json  pyproject.toml  summarize.py  test_dataset.json
.github/workflows/: pr-summary.yml  pre-commit.yml
docs/: TESTING.md
evals/: QUICKSTART.md  README.md  __init__.py  eval_cli.py  evaluation.py  prompt_variations.py
evals/examples/: build_specific_prs.py  run_evaluation_example.py
src/pr_summary_action/: __init__.py  config.py  summarize.py
tests/: __init__.py  test_config.py  test_credentials.py  test_fixtures.py  test_integration.py  test_summarize.py
